--- a/appClase01/app/src/main/res/values/themes.xml
+++ b/appClase01/app/src/main/res/values/themes.xml
@@ -7,4 +7,15 @@
         <item name="colorAccent">@color/teal_200</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.MiTema" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/amarillo</item>
+        <item name="colorPrimaryDark">@color/naranja</item>
+        <item name="colorAccent">@color/white</item>
+        <!-- Customize your theme here. -->
+    </style>
+
+    <color name="amarillo">#FFEB3B</color>
+    <color name="naranja">#FF9800</color>
 </resources>
