--- a/appClase2/app/src/main/res/layout/item_pokedex.xml
+++ b/appClase2/app/src/main/res/layout/item_pokedex.xml
@@ -25,7 +25,7 @@
             app:srcCompat="@drawable/ic_launcher_background" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txtNombrePokedex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
